--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "file"
   ],
   "dependencies" : {
-    "request" : "2.12.0"
+    "request" : "2.12.0",
+    "heap"    : "0.2.1"
   },
   "license": "MIT",
   "engines": {
